startsidans struktur och några bilder. tema påbörjad struktur

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Blogg:
    {% endfor %}
 </ul>
 
-Teman:
+Temann:
 <ul>
    {% for theme in site.themes %}
    <li><a href="{{theme.url}}">{{ theme.title }}</a></li>
