improved project (minor), changed startpage navbar

--- a/themes.html
+++ b/themes.html
@@ -6,6 +6,9 @@ layout: default
    <div class="wrapper">
       <section >
          <h1>Teman</h1>
+         <p>
+            Lär dig mer om vår forskning kring digitala läromedel här! Börja med <a href="">introduktionstemat</a>. Övriga kan ses i valfri ordning. 
+         </p>
       </section>
    </div>
 </div>
