added recommendations page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-layout: start
+layout: default
+title: Start
 ---
 <!-- <div class="header-buffer"></div> -->
 <div class="section-parent " id="children-computer-parent">
@@ -39,7 +40,7 @@ layout: start
                </div>
                <a href="#"><div> Läs mer om forskargruppen</div></a>
             </div>
-            <div class="img"><div class=""></div></div>
+            <div class="img round"><div class=""></div></div>
          </div>
       </section>
    </div>
@@ -52,13 +53,35 @@ layout: start
             <div class="info">
                <h3>Med lärandet i fokus</h3>
                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex illo, omnis doloribus animi quasi suscipit, architecto unde accusamus, distinctio temporibus itaque beatae, necessitatibus corrupti eos! Sapiente aspernatur vitae hic commodi.
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
-               </p>
-               <p>
-                  Consectetur adipisicing elit. Ea quam, dignissimos quaerat. Id eius quod aut, expedita, quos temporibus nobis.
                </p>
                <a href="#"><div>Läs mer om forskningen kring digitala läromedel</div></a>
             </div>
+         </div>
+      </section>
+   </div>
+</div>
+<div class="section-parent">
+   <div class="wrapper">
+      <section id="liu-section2">
+         <div class="about-media">
+            <div class="info">
+               <div class="content">
+
+                  <h3>Tvärvetenskaplig grund</h3>
+                  <p class="p-desktop">
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi consequuntur, corporis totam ipsa, possimus natus molestias reprehenderit nemo vitae, sit iure laborum, ducimus dicta labore! Dolor sequi amet quisquam autem.
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
+                  </p>
+                  <p class="p-tablet">
+                      Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
+                  </p>
+
+               </div>
+               <a href="#"><div> Läs mer om forskargruppen</div></a>
+            </div>
+            <div class="img round"><div class=""></div></div>
          </div>
       </section>
    </div>
