added new footer and some layout changes

--- a/index.html
+++ b/index.html
@@ -3,86 +3,91 @@ layout: default
 title: Start
 ---
 <!-- <div class="header-buffer"></div> -->
-<div class="section-parent " id="children-computer-parent">
-   <div class="wrapper">
-      <section id="children-computer-section">
-         <div class="about-media">
+<div class="index">
+   <div class="section-parent " id="children-computer-parent">
+      <div class="wrapper">
+         <section id="children-computer-section">
+            <div class="content-box">
 
-            <!-- <div class="img"><div class="overlay-olive"></div></div> -->
-            <div class="children-computer-overlay">
-            </div>
-            <div class="info">
-               <h3>Mer än bara spel</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
-               </p>
-               <p>
-                  Consectetur adipisicing elit. Ea quam, dignissimos quaerat. Id eius quod aut, expedita, quos temporibus nobis.
-               </p>
-               <a href="#"><div>Våra rekomenderade digitala läromedel</div></a>
-            </div>
-         </div>
-      </section>
-   </div>
-</div>
-<div class="section-parent">
-   <div class="wrapper">
-      <section id="liu-section">
-         <div class="about-media">
-            <div class="info">
-               <div class="content">
-
-                  <h3>Tvärvetenskaplig grund</h3>
+               <!-- <div class="img"><div class="overlay-olive"></div></div> -->
+               <div class="children-computer-overlay">
+               </div>
+               <div class="info">
+                  <h1>Mer än bara spel</h1>
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
                   </p>
-
+                  <p>
+                     Consectetur adipisicing elit. Ea quam, dignissimos quaerat. Id eius quod aut, expedita, quos temporibus nobis.
+                  </p>
+                  <a href="/recommendations"><div>Våra rekomenderade digitala läromedel</div></a>
                </div>
-               <a href="#"><div> Läs mer om forskargruppen</div></a>
             </div>
-            <div class="img round"><div class=""></div></div>
-         </div>
-      </section>
+         </section>
+      </div>
    </div>
-</div>
-<div class="section-parent">
-   <div class="wrapper">
-      <section id="child-ipad-section">
-         <div class="about-media">
-            <div class="img round"><div class="overlay-olive round"></div></div>
-            <div class="info">
-               <h3>Med lärandet i fokus</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex illo, omnis doloribus animi quasi suscipit, architecto unde accusamus, distinctio temporibus itaque beatae, necessitatibus corrupti eos! Sapiente aspernatur vitae hic commodi.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
-               </p>
-               <a href="#"><div>Läs mer om forskningen kring digitala läromedel</div></a>
-            </div>
-         </div>
-      </section>
-   </div>
-</div>
-<div class="section-parent">
-   <div class="wrapper">
-      <section id="liu-section2">
-         <div class="about-media">
-            <div class="info">
-               <div class="content">
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="liu-section">
+            <div class="content-box">
+               <div class="info">
+                  <div class="content">
 
-                  <h3>Tvärvetenskaplig grund</h3>
+                     <h1>Tvärvetenskaplig grund</h1>
+                     <p>
+                        Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
+                     </p>
+
+                  </div>
+                  <a href="#"><div> Läs mer om forskargruppen</div></a>
+               </div>
+               <div class="img round"><div class=""></div></div>
+            </div>
+         </section>
+      </div>
+   </div>
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="child-ipad-section">
+            <div class="content-box">
+               <div class="img round"><div class="overlay-olive round"></div></div>
+               <div class="info">
+                  <h1>Med lärandet i fokus</h1>
                   <p class="p-desktop">
-                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi consequuntur, corporis totam ipsa, possimus natus molestias reprehenderit nemo vitae, sit iure laborum, ducimus dicta labore! Dolor sequi amet quisquam autem.
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex illo, omnis doloribus animi quasi suscipit, architecto unde accusamus, distinctio temporibus itaque beatae, necessitatibus corrupti eos! Sapiente aspernatur vitae hic commodi.
                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
                   </p>
                   <p class="p-tablet">
-                      Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
+                     Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
                   </p>
-
+                  <a href="/themes"><div>Läs mer om forskningen kring digitala läromedel</div></a>
                </div>
-               <a href="#"><div> Läs mer om forskargruppen</div></a>
             </div>
-            <div class="img round"><div class=""></div></div>
-         </div>
-      </section>
+         </section>
+      </div>
+   </div>
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="liu-section2">
+            <div class="content-box">
+               <div class="info">
+                  <div class="content">
+
+                     <h1>Tvärvetenskaplig grund</h1>
+                     <p class="p-desktop">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi consequuntur, corporis totam ipsa, possimus natus molestias reprehenderit nemo vitae, sit iure laborum, ducimus dicta labore! Dolor sequi amet quisquam autem.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
+                     </p>
+                     <p class="p-tablet">
+                        Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
+                     </p>
+
+                  </div>
+                  <a href="#"><div> Läs mer om forskargruppen</div></a>
+               </div>
+               <div class="img round"><div class=""></div></div>
+            </div>
+         </section>
+      </div>
    </div>
 </div>
