--- a/recommendations.html
+++ b/recommendations.html
@@ -8,7 +8,7 @@ title: Rekomenderade Digitala Läromedel
       <section >
          <h1>Exempel på en ny generation digitala läromedel</h1>
          <p>
-            Det finns många läromedel tillgängliga idag och vi vill bla bla bla....
+            Det finns <a class="link" href="">många</a> läromedel tillgängliga idag och vi vill bla bla bla....
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis ullam nihil saepe maxime. Provident, reprehenderit mollitia delectus architecto praesentium cum, fugit eos assumenda illum magnam nobis. Fugiat, numquam, id.
          </p>
       </section>
@@ -18,7 +18,7 @@ title: Rekomenderade Digitala Läromedel
    <div class="wrapper">
       <section>
          {% for t in site.recommendations %}
-         <div class="theme-media-object">
+         <div class="theme-media-object" data-categorys="{}">
             <div class="img-holder">
                <!-- <div class="img"></div> -->
                <!-- <div class="img" style='background-image: url("/assets/img/recommendations/critter.png")'></div> -->
