--- a/themes.html
+++ b/themes.html
@@ -21,7 +21,7 @@ layout: default
             <div class="img-holder">
                <!-- <div class="img"></div> -->
                <!-- <div class="img" style='background-image: url("/assets/img/recommendations/critter.png")'></div> -->
-               <div class="img" style='background-image: url("/assets/img/recommendations/critter.png")'></div>
+               <div class="img" style="background-image: url('http://img.youtube.com/vi/{{t.youtube-id}}/sddefault.jpg')"></div>
 
             </div>
             <div class="info">
