--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <nav>
          <ul>
             <li><a id="navLink1" class="" href="/#header">asdasd</a></li>
-            <li><a id="navLink2" href="/themes">Teman</a></li>
+            <li><a id="navLink2" href="/themes/">Teman</a></li>
             <li><a id="navLink3" >Digitala läromedel</a></li>
             <li><a id="navLink4" >Demo</a></li>
             <li><a id="navLink5" >Artiklar</a></li>
