--- a/about.html
+++ b/about.html
@@ -1,19 +1,83 @@
 ---
 layout: default
 ---
+<!-- <div class="header-buffer"></div> -->
+<div class="about">
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="forskargruppen">
+            <div class="about-media">
+               <div class="infoforsk">
+                  <div class="content">
+                     <h3>Vi är en tvärvetenskaplig forskargrupp</h3>
+                     <p>
+                        Educational Technology Group består av forskare vid Linköpings och Lunds universitet. Vi är bland de starkaste kritikerna och starkaste entusiasterna för digitalisering av skolan! Och <strong>vårt syfte är att</strong>
+                        <ul>
+                        <li>ge en knuff åt svenska skolan för elevers och lärares skull</li>
+                        <li>visa vilka mervärden man kan uppnå med digitala läromedel när man utnyttjar dess fulla potential</li>
+                        <li>visa på skillnaderna mellan vad man kan göra med digitalisering och vad som faktiskt finns och används idag</li>
+                        <li>höja ribban för alla de som utvecklar och producerar digitala läromedel och pedagogisk programvara.</li>
+                     </ul>
+                     </p>
+                     <p>
+                        Vi vill vara upplysande/bildande, lättillgängliga och inspirerande!
+                     </p>
+                  </div>
 
-<h1>INNEHÅLL - index.html, layout: default</h1>
+                  <a href="#"><div> Länk till vår hemsida</div></a>
+               </div>
+            </div>
+         </section>
+      </div>
+   </div>
 
-Blogg:
-<ul>
-   {% for post in site.posts %}
-   <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-   {% endfor %}
-</ul>
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="kontakta-oss">
+            <div class="about-media">
+               <div class="info">
+                  <div class="content">
 
-Temann:
-<ul>
-   {% for theme in site.themes %}
-   <li><a href="{{theme.url}}">{{ theme.title }}</a></li>
-   {% endfor %}
-</ul>
+                     <h3>Vill du komma i kontakt med oss?</h3>
+                     <p>
+                        Vill du kanske veta mer om vårt arbete eller har frågor kring någon av våra rekomendationer av digitalta läromedel. Alternativt något av våra egenutvecklade digitala läromedel.
+                        Vill du komma i kontakt med oss så skicka ett mail till nedanstående adress.<br>
+                        </br>Med Vänliga Hälsningar Educational Thechnology Group
+                     </p>
+                  </div>
+                  <div class="img"><div class=""></div></div>
+                  <a href="#"><div>Kontakta oss</div></a>
+               </div>
+
+            </div>
+         </section>
+      </div>
+   </div>
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="avslut">
+            <div class="about-media">
+               <div class="img round"></div>
+               <div class="info">
+                  <h3>Vårt manifest är grunden</h3>
+                  <div class="manifest">
+                  <p>
+                     Det finns ett behov av en Ny generation digitala läromedel som (till skillnad från de befintliga):
+                  </p>
+                     <ul>
+                     <li>Sätter <strong>lärande</strong> framför testande</li>
+                     <li>Sätter <strong>inlärning</strong> framför utlärning</li>
+                     <li>Sätter <strong>digital funktionalitet</strong> framför digital form</li>
+                     <li>Sätter <strong>formativ process</strong> framför summativ utvärdering</li>
+                     <li>Sätter <strong>djup och förståelse</strong> framför det heltäckande men ytliga</li>
+                     </ul>
+                  <p><br>Den Nya generationens digitala läromedel är adaptiva och inklusiva och erbjuder stöd och utmaning till varje individ utan att vara utpekande
+                  </br></p>
+                  <!--<a href="#"><div>Läs mer om oss</div></a>-->
+                  </div>
+               </div>
+            </div>
+         </section>
+      </div>
+   </div>
+</div>
