--- a/recommendations.html
+++ b/recommendations.html
@@ -6,7 +6,7 @@ title: Rekomenderade Digitala Läromedel
 <div class="section-parent" id="recommendations-intro-section">
    <div class="wrapper">
       <section >
-         <h1>Exempel på en ny generation digitala läromedel</h1>
+         <h1>En ny generation digitala läromedel</h1>
          <p>
             Det finns <a class="link" href="">många</a> läromedel tillgängliga idag och vi vill bla bla bla....
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis ullam nihil saepe maxime. Provident, reprehenderit mollitia delectus architecto praesentium cum, fugit eos assumenda illum magnam nobis. Fugiat, numquam, id.
