--- a/index.html
+++ b/index.html
@@ -28,6 +28,53 @@ title: Start
    </div>
    <div class="section-parent">
       <div class="wrapper">
+         <section id="etg-section">
+            <div class="content-box">
+               <div class="img"><div class=""></div></div>
+               <div class="info">
+                  <div class="content">
+
+                     <h1>Vårt Manifest</h1>
+                     <ul class="manifest">
+                        <li ><p>Vi sätter <strong>lärande</strong> framför testande</p></li>
+                        <li ><p>Vi sätter <strong>inlärning</strong> framför utlärning</p></li>
+                        <li ><p>Vi sätter <strong>digital funktionalitet</strong> framför digital form</p></li>
+                        <li ><p>Vi sätter <strong>formativ process</strong> framför summativ utvärdering</p></li>
+                        <li ><p>Vi sätter <strong>djup och förståelse</strong> framför det heltäckande men ytliga</p></li>
+                     </ul>
+                     <p class="p-tablet">
+                        Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
+                     </p>
+                  </div>
+                  <a href="#"><div> Läs mer om forskargruppen</div></a>
+               </div>
+
+            </div>
+         </section>
+      </div>
+   </div>
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="child-ipad-section">
+            <div class="content-box">
+               <div class="img round"><div class="overlay-olive round"></div></div>
+               <div class="info">
+                  <h1>Med lärandet i fokus</h1>
+                  <p class="p-desktop">
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex illo, omnis doloribus animi quasi suscipit, architecto unde accusamus, distinctio temporibus itaque beatae, necessitatibus corrupti eos! Sapiente aspernatur vitae hic commodi.
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
+                  </p>
+                  <p class="p-tablet">
+                     Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
+                  </p>
+                  <a href="/themes"><div>Läs mer om forskningen kring digitala läromedel</div></a>
+               </div>
+            </div>
+         </section>
+      </div>
+   </div>
+   <div class="section-parent">
+      <div class="wrapper">
          <section id="liu-section">
             <div class="content-box">
                <div class="info">
@@ -41,7 +88,7 @@ title: Start
                   </div>
                   <a href="#"><div> Läs mer om forskargruppen</div></a>
                </div>
-               <div class="img round"><div class=""></div></div>
+               <div class="img "><div class=""></div></div>
             </div>
          </section>
       </div>
@@ -85,9 +132,10 @@ title: Start
                   </div>
                   <a href="#"><div> Läs mer om forskargruppen</div></a>
                </div>
-               <div class="img round"><div class=""></div></div>
+               <div class="img"><div class=""></div></div>
             </div>
          </section>
       </div>
    </div>
+
 </div>
