new contacts & about

--- a/about.html
+++ b/about.html
@@ -5,6 +5,40 @@ layout: default
 <div class="about">
    <div class="section-parent">
       <div class="wrapper">
+         <section id="avslut">
+            <div class="about-media">
+               <div class="info">
+
+                  <h3>Vårt manifest är grunden</h3>
+                  <div class="manifest">
+                     <ul>
+                     <li>Sätta <strong>lärande</strong> framför testande</li>
+                     <li>Sätta <strong>inlärning</strong> framför utlärning</li>
+                     <li>Sätta <strong>digital funktionalitet</strong> framför digital form</li>
+                     <li>Sätta <strong>formativ process</strong> framför summativ utvärdering</li>
+                     <li>Sätta <strong>djup och förståelse</strong> framför det heltäckande men ytliga</li>
+                     </ul>
+                  <p><br>Den Nya generationens digitala läromedel är adaptiva och inklusiva och erbjuder stöd och utmaning till varje individ utan att vara utpekande
+                  </br></p>
+                  </div>
+               </div>
+            </div>
+         </section>
+      </div>
+   </div>
+
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="bild">
+            <div class="about-media">
+               <div class="img"><div class=""></div></div>
+            </div>
+         </section>
+      </div>
+   </div>
+
+   <div class="section-parent">
+      <div class="wrapper">
          <section id="forskargruppen">
             <div class="about-media">
                <div class="infoforsk">
@@ -23,61 +57,9 @@ layout: default
                         Vi vill vara upplysande/bildande, lättillgängliga och inspirerande!
                      </p>
                   </div>
-
                   <a href="#"><div> Länk till vår hemsida</div></a>
                </div>
             </div>
          </section>
       </div>
    </div>
-
-   <div class="section-parent">
-      <div class="wrapper">
-         <section id="kontakta-oss">
-            <div class="about-media">
-               <div class="info">
-                  <div class="content">
-
-                     <h3>Vill du komma i kontakt med oss?</h3>
-                     <p>
-                        Vill du kanske veta mer om vårt arbete eller har frågor kring någon av våra rekomendationer av digitalta läromedel. Alternativt något av våra egenutvecklade digitala läromedel.
-                        Vill du komma i kontakt med oss så skicka ett mail till nedanstående adress.<br>
-                        </br>Med Vänliga Hälsningar Educational Thechnology Group
-                     </p>
-                  </div>
-                  <div class="img"><div class=""></div></div>
-                  <a href="#"><div>Kontakta oss</div></a>
-               </div>
-
-            </div>
-         </section>
-      </div>
-   </div>
-   <div class="section-parent">
-      <div class="wrapper">
-         <section id="avslut">
-            <div class="about-media">
-               <div class="img round"></div>
-               <div class="info">
-                  <h3>Vårt manifest är grunden</h3>
-                  <div class="manifest">
-                  <p>
-                     Det finns ett behov av en Ny generation digitala läromedel som (till skillnad från de befintliga):
-                  </p>
-                     <ul>
-                     <li>Sätter <strong>lärande</strong> framför testande</li>
-                     <li>Sätter <strong>inlärning</strong> framför utlärning</li>
-                     <li>Sätter <strong>digital funktionalitet</strong> framför digital form</li>
-                     <li>Sätter <strong>formativ process</strong> framför summativ utvärdering</li>
-                     <li>Sätter <strong>djup och förståelse</strong> framför det heltäckande men ytliga</li>
-                     </ul>
-                  <p><br>Den Nya generationens digitala läromedel är adaptiva och inklusiva och erbjuder stöd och utmaning till varje individ utan att vara utpekande
-                  </br></p>
-                  <!--<a href="#"><div>Läs mer om oss</div></a>-->
-                  </div>
-               </div>
-            </div>
-         </section>
-      </div>
-   </div>
-</div>
