--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,49 @@
 ---
 layout: default
 ---
+<div class="contact">
 
-kontakt
+   <div class="section-parent" id="contact-intro-section">
+      <div class="wrapper">
+         <section>
+            <h1>Kontakt</h1>
+            <p>
+               Du är alltid välkommen att kontakta oss vid olika funderingar och frågor. Det kan <strong>exempelvis</strong> handla om nedanstående:
+               <ul>
+                  <li> Om du är <strong>beslutsfattare eller lärare</strong> och vill veta mer om våra rekomendationer</li>
+                  <li> Om du är <strong>studerande</strong> och vill veta mer om våra forskarprojekt</li>
+                  <li> Om du är <strong>jornalist</strong> och vill ställa frågor kring nya generationens digitala läromedel</li>
+                  <li> Om du har ett intresse av att <strong>boka in oss</strong> som föreläsare eller talare vid exmepelvis mässor</li>
+               </ul>
+            </p>
+            <p>
+               Även andra funderingar eller frågor som du undrar över är varmt välkommet att ställa.
+               <br>MVH Educational Technology Group</br>
+            </p>
+         </section>
+      </div>
+   </div>
+
+
+   <div class="section-parent">
+      <div class="wrapper">
+         <section id="contact-section">
+            <div class="contact">
+               <h3>Kontakta oss</h3>
+               <h4>Namn</h4>
+               <input type="text" spellcheck="false" placeholder=" skriv ditt för och efternamn">
+               <h4>Adress</h4>
+               <input type="text" spellcheck="false" placeholder="Skriv in din hemadress">
+               <h4>E-postadress</h4>
+               <input type="text" spellcheck="false" placeholder="Skriv in din e-postadress">
+               <h4>Varför du vill komma i kontakt med oss</h4>
+               <input type="text" spellcheck="false" placeholder="skriv in ditt meddelande till oss här tack">
+               <p>
+                  Tack för ditt meddelande! Vi kommer att försöka svara på ditt meddelande så fort vi kan!
+               </p>
+               <a href="#"><div>Skicka</div></a>
+            </div>
+         </section>
+      </div>
+   </div>
+</div>
