--- a/articles.html
+++ b/articles.html
@@ -9,8 +9,8 @@ title: Artiklar
          <section>
             <h1>Artiklar</h1>
             <p>
-               Många forskare och andra skribenter har skrivit om digitala läromedel. Vi har här tagit ut ett urval som berör ämnet nya generationens digitala läromedel.
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis ullam nihil saepe maxime. Provident, reprehenderit mollitia delectus architecto praesentium cum, fugit eos assumenda illum magnam nobis. Fugiat, numquam, id.
+               Många forskare och andra skribenter har skrivit om olika typer av digitala läromedel. Exempelvis kring hur digitala läromedel påverkar inlärningen hos barn, hur det gynnar dagens skola eller samhället i stort eller hurvida dessa läromedel är invidianpassade och så vidare.
+               Är du intresserad av att läsa mer kring ämnet har vi här tagit ut ett urval av artiklar och andra texter som berör ämnet.
             </p>
          </section>
       </div>
