--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ title: Start
                <div class="info">
                   <h1>Mer än bara spel</h1>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
+                     Det finns många olika typer digitala läromedel och det kan vara svårt att veta vilken eller vilka som passar för just din undervisning. Vi rekommenderar digitala läromedel som vi tycker är bra, lärorika och pedagogiska.
                   </p>
                   <p>
-                     Consectetur adipisicing elit. Ea quam, dignissimos quaerat. Id eius quod aut, expedita, quos temporibus nobis.
+                      Gå vidare till våra rekommendationer och utforksa om våra rekommendationer kan vara något för dig.
                   </p>
                   <a href="/recommendations"><div>Våra rekomenderade digitala läromedel</div></a>
                </div>
@@ -61,13 +61,13 @@ title: Start
                <div class="info">
                   <h1>Med lärandet i fokus</h1>
                   <p class="p-desktop">
-                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex illo, omnis doloribus animi quasi suscipit, architecto unde accusamus, distinctio temporibus itaque beatae, necessitatibus corrupti eos! Sapiente aspernatur vitae hic commodi.
-                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
+                     Vill du veta mer om den nya generationens digitala läromedel? Vill du veta mer om skillnader och likheter mellan läromedel och testverktyg? Eller kanske vilka vinster den nya generationens digitala läromedel skulle göra för samhället?
+                     Gå in och lyssna på ett av våra teman som bland annat behandlar dessa frågor.
                   </p>
                   <p class="p-tablet">
-                     Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
+                     Vill du veta mer om den nya generationens digitala läromedel? Gå in och lyssna på våra olika teman som bland annat behandlar denna fråga.
                   </p>
-                  <a href="/themes"><div>Läs mer om forskningen kring digitala läromedel</div></a>
+                  <a href="/themes"><div>Gå vidare och titta på våra teman</div></a>
                </div>
             </div>
          </section>
