--- a/posts.html
+++ b/posts.html
@@ -8,7 +8,7 @@ layout: default
          <section >
             <h1>Nyheter</h1>
             <p>
-               Här får du ta del av det senaste från oss. Letar du efter något särskilt - <a href="/archive">kika i arkivet</a>
+               Här kan du ta del av det senaste från oss. Exempelvis få veta mer om vilka mässor eller föreläsningar Educational Technology Group ska delta i eller har deltagit i. Eller varför inte läsa om vad Educational Technology Group anser om det senaste inom digitala läromedel. Letar du efter något särskilt - <a href="/archive">kika i arkivet</a>
             </p>
          </section>
       </div>
