--- a/themes.html
+++ b/themes.html
@@ -7,7 +7,7 @@ layout: default
       <section >
          <h1>Teman</h1>
          <p>
-            Lär dig mer om vår forskning kring digitala läromedel här! Börja med <a href="">introduktionstemat</a>. Övriga kan ses i valfri ordning.
+            Lär dig mer om nya generationens digitala läromedel här! Våra teman är kortare videoföreläsningar där vi pratar om nya generationens digitala läromedel på ett enkelt och intressant sätt.  Börja gärna med <a href="">introduktionstemat</a>. för att få en bredare förståelse över ämnet. Övriga teman kan ses i valfri ordning.
          </p>
       </section>
    </div>
