--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@ layout: default
             </p>
             <p>
                Även andra funderingar eller frågor som du undrar över är varmt välkommet att ställa.
-               <br>MVH Educational Technology Group</br>
+               <br>Med vänliga hälsningar Educational Technology Group</br>
             </p>
          </section>
       </div>
@@ -31,13 +31,13 @@ layout: default
             <div class="contact">
                <h3>Kontakta oss</h3>
                <h4>Namn</h4>
-               <input type="text" spellcheck="false" placeholder=" skriv ditt för och efternamn">
+               <input type="text" id="namn" spellcheck="false" placeholder=" Skriv ditt för och efternamn">
                <h4>Adress</h4>
-               <input type="text" spellcheck="false" placeholder="Skriv in din hemadress">
+               <input type="text" id="adress" spellcheck="false" placeholder="Skriv in din hemadress">
                <h4>E-postadress</h4>
-               <input type="text" spellcheck="false" placeholder="Skriv in din e-postadress">
+               <input type="text" id="epost" spellcheck="false" placeholder="Skriv in din e-postadress">
                <h4>Varför du vill komma i kontakt med oss</h4>
-               <input type="text" spellcheck="false" placeholder="skriv in ditt meddelande till oss här tack">
+               <input type="text" spellcheck="false" placeholder="Skriv dina frågor och funderingar här">
                <p>
                   Tack för ditt meddelande! Vi kommer att försöka svara på ditt meddelande så fort vi kan!
                </p>
