--- a/recommendations.html
+++ b/recommendations.html
@@ -8,8 +8,7 @@ title: Rekomenderade Digitala Läromedel
       <section >
          <h1>En ny generation digitala läromedel</h1>
          <p>
-            Det finns <a class="link" href="">många</a> läromedel tillgängliga idag och vi vill bla bla bla....
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis ullam nihil saepe maxime. Provident, reprehenderit mollitia delectus architecto praesentium cum, fugit eos assumenda illum magnam nobis. Fugiat, numquam, id.
+            Det finns <a class="link" href="">många</a> läromedel tillgängliga idag och det kan vara svårt att välja rätt digitala läromedel till undervisningen. Våra rekommenderade digitala läromedel är roliga och pedagogiska. Nedan kan du se, läsa och testa på olika digitala läromedel. 
          </p>
       </section>
    </div>
