--- a/articles.html
+++ b/articles.html
@@ -19,55 +19,15 @@ title: Artiklar
    <div class="section-parent">
       <div class="wrapper">
          <section id="articles-section">
+            {% for a in site.articles %}
             <div class="article">
-               <a href="#"><i class="fa fa-file-pdf-o"></i> </a>
-               <h3>Artikelns titel</h3>
-               <h4>Författare. Utgivningsår. Fullständig ref</h4>
-               <div class="abstract">
-               <p>
-                  Här kommer ett abstract stå.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis ullam nihil saepe maxime. Provident, reprehenderit mollitia delectus architecto praesentium cum, fugit eos assumenda illum magnam nobis. Fugiat, numquam, id
-               </p>
-               </div>
 
+               <a href="#"><h3><i class="fa fa-file-pdf-o"></i>{{a.title}}</h3> </a>
+               <h4> {{a.author}}. {{a.institute}}. {{a.publish-date}}. </h4><h4> {{a.complete-ref}} </h4>
+               <hr>
+               <p class="abstract">{{a.abstract}}</p>
             </div>
-
-            <div class="article">
-               <a href="#"><i class="fa fa-file-pdf-o"></i></a>
-               <h3>Artikelns titel</h3>
-               <h4>Författare. Utgivningsår. Fullständig ref</h4>
-               <div class="abstract">
-               <p>
-                  Här kommer ett abstract stå.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis ullam nihil saepe maxime. Provident, reprehenderit mollitia delectus architecto praesentium cum, fugit eos assumenda illum magnam nobis. Fugiat, numquam, id
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat blanditiis illum repudiandae atque doloremque rem, vel nihil sit quae modi vitae ipsum fugit, perspiciatis, sint ullam cumque saepe possimus?
-               </p>
-               </div>
-            </div>
-
-            <div class="article">
-               <a href="#"><i class="fa fa-file-pdf-o"></i> </a>
-               <h3>Artikelns titel</h3>
-               <h4>Författare. Utgivningsår. Fullständig ref</h4>
-               <div class="abstract">
-               <p>
-                  Här kommer ett abstract stå.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis ullam nihil saepe maxime. Provident, reprehenderit mollitia delectus architecto praesentium cum, fugit eos assumenda illum magnam nobis. Fugiat, numquam, id
-               </p>
-               </div>
-            </div>
-
-            <div class="article">
-               <a href="#"><i class="fa fa-file-pdf-o"></i> </a>
-               <h3>Artikelns titel</h3>
-               <h4>Författare. Utgivningsår. Fullständig ref</h4>
-               <div class="abstract">
-               <p>
-                  Här kommer ett abstract stå.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis ullam nihil saepe maxime. Provident, reprehenderit mollitia delectus architecto praesentium cum, fugit eos assumenda illum magnam nobis. Fugiat, numquam, id
-               </p>
-               </div>
-            </div>
+         {% endfor %}
          </section>
       </div>
    </div>
