change in contact

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ layout: default
                <ul>
                   <li> Om du är <strong>beslutsfattare eller lärare</strong> och vill veta mer om våra rekomendationer</li>
                   <li> Om du är <strong>studerande</strong> och vill veta mer om våra forskarprojekt</li>
-                  <li> Om du är <strong>jornalist</strong> och vill ställa frågor kring nya generationens digitala läromedel</li>
+                  <li> Om du är <strong>journalist</strong> och vill ställa frågor kring nya generationens digitala läromedel</li>
                   <li> Om du har ett intresse av att <strong>boka in oss</strong> som föreläsare eller talare vid exmepelvis mässor</li>
                </ul>
             </p>
