changed some texts in index and articles

--- a/articles.html
+++ b/articles.html
@@ -9,7 +9,7 @@ title: Artiklar
          <section>
             <h1>Artiklar</h1>
             <p>
-               Många forskare och andra skribenter har skrivit om olika typer av digitala läromedel. Exempelvis kring hur digitala läromedel påverkar inlärningen hos barn, hur det gynnar dagens skola eller samhället i stort eller hurvida dessa läromedel är invidianpassade och så vidare.
+               Många forskare och andra skribenter inom olika områden som till exempel datavetenskap, psykologi och kognitionsvetenskap har skrivit om digitala läromedel. Artiklarna berör exempelvis hur digitala läromedel påverkar inlärningen hos barn, hur det gynnar dagens skola eller samhället i stort eller hurvida dessa läromedel är invidianpassade och så vidare.
                Är du intresserad av att läsa mer kring ämnet har vi här tagit ut ett urval av artiklar och andra texter som berör ämnet.
             </p>
          </section>
