changed index so you can press all the buttons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Start
                         Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
                      </p>
                   </div>
-                  <a href="#"><div> Läs mer om forskargruppen</div></a>
+                  <a href="/about"><div> Läs mer om forskargruppen</div></a>
                </div>
 
             </div>
@@ -86,7 +86,7 @@ title: Start
                      </p>
 
                   </div>
-                  <a href="#"><div> Gå vidare till artiklar</div></a>
+                  <a href="/articles"><div> Gå vidare till artiklar</div></a>
                </div>
                <div class="img "><div class=""></div></div>
             </div>
@@ -106,7 +106,7 @@ title: Start
                   <p class="p-tablet">
                      Gå vidare till våra nyheter så kan du läsa mer om vårt arbete eller var vi kommer att synas härnäst.
                   </p>
-                  <a href="/themes"><div>Läs mer om de senaste nyheterna</div></a>
+                  <a href="/posts"><div>Läs mer om de senaste nyheterna</div></a>
                </div>
             </div>
          </section>
