--- a/about.html
+++ b/about.html
@@ -5,23 +5,19 @@ layout: default
 <div class="about">
    <div class="section-parent">
       <div class="wrapper">
-         <section id="avslut">
-            <div class="about-media">
-               <div class="info">
-
-                  <h3>Vårt manifest är grunden</h3>
-                  <div class="manifest">
-                     <ul>
-                     <li>Sätta <strong>lärande</strong> framför testande</li>
-                     <li>Sätta <strong>inlärning</strong> framför utlärning</li>
-                     <li>Sätta <strong>digital funktionalitet</strong> framför digital form</li>
-                     <li>Sätta <strong>formativ process</strong> framför summativ utvärdering</li>
-                     <li>Sätta <strong>djup och förståelse</strong> framför det heltäckande men ytliga</li>
-                     </ul>
-                  <p><br>Den Nya generationens digitala läromedel är adaptiva och inklusiva och erbjuder stöd och utmaning till varje individ utan att vara utpekande
-                  </br></p>
-                  </div>
-               </div>
+         <section>
+            <div class="manifest">
+               <h1>Vårt manifest är grunden</h1>
+               <ul>
+                  <li>Sätta <strong>lärande</strong> framför testande</li>
+                  <li>Sätta <strong>inlärning</strong> framför utlärning</li>
+                  <li>Sätta <strong>digital funktionalitet</strong> framför digital form</li>
+                  <li>Sätta <strong>formativ process</strong> framför summativ utvärdering</li>
+                  <li>Sätta <strong>djup och förståelse</strong> framför det heltäckande men ytliga</li>
+               </ul>
+               <p>
+                  Den Nya generationens digitala läromedel är adaptiva och inklusiva och erbjuder stöd och utmaning till varje individ utan att vara utpekande
+               </p>
             </div>
          </section>
       </div>
@@ -47,11 +43,11 @@ layout: default
                      <p>
                         Educational Technology Group består av forskare vid Linköpings och Lunds universitet. Vi är bland de starkaste kritikerna och starkaste entusiasterna för digitalisering av skolan! Och <strong>vårt syfte är att</strong>
                         <ul>
-                        <li>ge en knuff åt svenska skolan för elevers och lärares skull</li>
-                        <li>visa vilka mervärden man kan uppnå med digitala läromedel när man utnyttjar dess fulla potential</li>
-                        <li>visa på skillnaderna mellan vad man kan göra med digitalisering och vad som faktiskt finns och används idag</li>
-                        <li>höja ribban för alla de som utvecklar och producerar digitala läromedel och pedagogisk programvara.</li>
-                     </ul>
+                           <li>ge en knuff åt svenska skolan för elevers och lärares skull</li>
+                           <li>visa vilka mervärden man kan uppnå med digitala läromedel när man utnyttjar dess fulla potential</li>
+                           <li>visa på skillnaderna mellan vad man kan göra med digitalisering och vad som faktiskt finns och används idag</li>
+                           <li>höja ribban för alla de som utvecklar och producerar digitala läromedel och pedagogisk programvara.</li>
+                        </ul>
                      </p>
                      <p>
                         Vi vill vara upplysande/bildande, lättillgängliga och inspirerande!
@@ -63,3 +59,29 @@ layout: default
          </section>
       </div>
    </div>
+</div>
+
+<a id="contact-anchor"></a>
+<div class="contact">
+   <div class="section-parent" id="contact-intro-section">
+      <div class="wrapper">
+         <section>
+            <h1>Kontakt</h1>
+            <p>
+               Du är alltid välkommen att kontakta oss vid olika funderingar och frågor. Det kan <strong>exempelvis</strong> handla om nedanstående:
+               <ul>
+                  <li> Om du är <strong>beslutsfattare eller lärare</strong> och vill veta mer om våra rekomendationer</li>
+                  <li> Om du är <strong>studerande</strong> och vill veta mer om våra forskarprojekt</li>
+                  <li> Om du är <strong>journalist</strong> och vill ställa frågor kring nya generationens digitala läromedel</li>
+                  <li> Om du har ett intresse av att <strong>boka in oss</strong> som föreläsare eller talare vid exmepelvis mässor</li>
+               </ul>
+            </p>
+            <p>
+               Även andra funderingar eller frågor som du undrar över är varmt välkommet att ställa. Kontaktar oss gör du på E-post till
+               <span class="contact-email">kontakt@edutech.se</span>
+            </p>
+            <p>Med vänliga hälsningar Educational Technology Group</p>
+         </section>
+      </div>
+   </div>
+</div>
