--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,15 @@ layout: default
                </ul>
             </p>
             <p>
-               Även andra funderingar eller frågor som du undrar över är varmt välkommet att ställa.
-               <br>Med vänliga hälsningar Educational Technology Group</br>
+               Även andra funderingar eller frågor som du undrar över är varmt välkommet att ställa. Kontaktar oss gör du på E-post till
+               <span class="contact-email">kontakt@edutech.se</span>
             </p>
+            <p>Med vänliga hälsningar Educational Technology Group</p>
          </section>
       </div>
    </div>
 
+   <div class="contact-big-img"><div class="overlay"></div></div>
 
    <div class="section-parent">
       <div class="wrapper">
